--- a/data_process/marmousi_process_2.ipynb
+++ b/data_process/marmousi_process_2.ipynb
@@ -12,11 +12,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for num in range(3):\n",
+    "for num in range(2048):\n",
     "    vp = np.ones((1024,1024),dtype=np.float32)*2000\n",
     "    x = np.random.randint(200, 800)\n",
     "    y = np.random.randint(200, 800)\n",
@@ -27,9 +27,31 @@
     "                vp[i,j] = 3000.\n",
     "    vs = vp / np.sqrt(3)\n",
     "    rho = 0.31 * vp ** (1 / 4) * 1000\n",
-    "    vp[::2,::2].T.tofile(r'E:\\dataaaaaaaaaa\\test2\\m_'+str(num)+ '.vp')\n",
-    "    vs[::2,::2].T.tofile(r'E:\\dataaaaaaaaaa\\test2\\m_'+str(num)+ '.vs')\n",
-    "    rho[::2,::2].T.tofile(r'E:\\dataaaaaaaaaa\\test2\\m_'+str(num)+ '.rho')"
+    "    vp[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512\\m_'+str(num)+ '.vp')\n",
+    "    vs[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512\\m_'+str(num)+ '.vs')\n",
+    "    rho[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512\\m_'+str(num)+ '.rho')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for num in range(2048):\n",
+    "    vp = np.ones((1024,1024),dtype=np.float32)*2000\n",
+    "    x = np.random.randint(200, 800)\n",
+    "    y = np.random.randint(200, 800)\n",
+    "    r = np.random.randint(50, min(x,1024-x,y,1024-y,200))\n",
+    "    for i in range(x-r,x+r):\n",
+    "        for j in range(y-r,y+r):\n",
+    "            if (i-x)**2+(j-y)**2<r**2:\n",
+    "                vp[i,j] = 3000.\n",
+    "    vs = vp / np.sqrt(3)\n",
+    "    rho = 0.31 * vp ** (1 / 4) * 1000\n",
+    "    vp[::4,::4].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_256\\m_'+str(num)+ '.vp')\n",
+    "    vs[::4,::4].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_256\\m_'+str(num)+ '.vs')\n",
+    "    rho[::4,::4].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_256\\m_'+str(num)+ '.rho')"
    ]
   },
   {
