--- a/data_process/marmousi_process_2.ipynb
+++ b/data_process/marmousi_process_2.ipynb
@@ -12,24 +12,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for num in range(2048):\n",
+    "labels = np.zeros((1024,3),dtype=np.float32)\n",
+    "for num in range(1024):\n",
     "    vp = np.ones((1024,1024),dtype=np.float32)*2000\n",
     "    x = np.random.randint(200, 800)\n",
     "    y = np.random.randint(200, 800)\n",
     "    r = np.random.randint(50, min(x,1024-x,y,1024-y,200))\n",
+    "    labels[num,0] = x\n",
+    "    labels[num,1] = y\n",
+    "    labels[num,2] = r\n",
     "    for i in range(x-r,x+r):\n",
     "        for j in range(y-r,y+r):\n",
     "            if (i-x)**2+(j-y)**2<r**2:\n",
     "                vp[i,j] = 3000.\n",
     "    vs = vp / np.sqrt(3)\n",
     "    rho = 0.31 * vp ** (1 / 4) * 1000\n",
-    "    vp[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512\\m_'+str(num)+ '.vp')\n",
-    "    vs[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512\\m_'+str(num)+ '.vs')\n",
-    "    rho[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512\\m_'+str(num)+ '.rho')"
+    "    vp[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_v2\\m_'+str(num)+ '.vp')\n",
+    "    vs[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_v2\\m_'+str(num)+ '.vs')\n",
+    "    rho[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_v2\\m_'+str(num)+ '.rho')\n",
+    "np.save(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_v2_label\\labels',labels)"
    ]
   },
   {
