--- a/data_process/data_process_water_detect.ipynb
+++ b/data_process/data_process_water_detect.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -16,62 +12,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 1., 2., 3., 4., 5., 6., 7., 8., 9.])"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.linspace(0,9,10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "left = np.random.randint(256, 640)\n",
-    "right = np.random.randint(256, 640)\n",
-    "width = np.random.randint(20, 200)"
+    "water_rho = 1010.0\n",
+    "water_vp = 1500.0\n",
+    "water_vs = 0.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(632, 281, 105)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "left,right,width"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = np.zeros((1024,3),dtype=np.float32)\n"
+    "labels = np.zeros((2048,3),dtype=np.float32)\n",
+    "for num in range(2048):\n",
+    "    left = np.random.randint(256, 640)\n",
+    "    right = np.random.randint(256, 640)\n",
+    "    width = np.random.randint(40, 200)\n",
+    "    labels[num,0] = left\n",
+    "    labels[num,1] = right\n",
+    "    labels[num,2] = width\n",
+    "    depth_list = np.linspace(left,right,1024).astype(int)\n",
+    "    vp = np.ones((1024,1024),dtype=np.float32)*2000\n",
+    "    vs = np.ones((1024,1024),dtype=np.float32)*1155\n",
+    "    rho = np.ones((1024,1024),dtype=np.float32)*2074\n",
+    "    for i,depth in enumerate(depth_list):\n",
+    "        vp[depth:depth+width,i] = 1500.0\n",
+    "        vs[depth:depth+width,i] = 0.0\n",
+    "        rho[depth:depth+width,i] = 1010.0\n",
+    "    vp[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment3\\model_512\\m_'+str(num)+ '.vp')\n",
+    "    vs[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment3\\model_512\\m_'+str(num)+ '.vs')\n",
+    "    rho[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment3\\model_512\\m_'+str(num)+ '.rho')\n",
+    "np.save(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment3\\model_512_label\\labels',labels)"
    ]
   }
  ],
