--- a/data_process/marmousi_process.ipynb
+++ b/data_process/marmousi_process.ipynb
@@ -40,7 +40,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for index in range(3):\n",
+    "data_num = 12544\n",
+    "labels = np.zeros((12544,3),dtype=np.float32)\n",
+    "for index in range(12544):\n",
     "    m_vp = np.array(marmousi_vp[500:500+1024,0+index:1024+index])\n",
     "    m_rho = np.array(marmousi_rho[500:500+1024,0+index:1024+index])*1000\n",
     "    m_vs = np.array(marmousi_vs[500:500+1024,0+index:1024+index])\n",
