--- a/data_process/data_process_water_detect.ipynb
+++ b/data_process/data_process_water_detect.ipynb
@@ -51,11 +51,95 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "data = np.fromfile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment3\\model_512\\m_'+str(0)+ '.vp',dtype = np.float32)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vpdata = data.reshape((512,512))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "labels[0]/2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plt.imshow(vpdata.T)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plt.imshow(vpdata.T)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plt.imshow(vpdata.T)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.fromfile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment3\\model_512\\m_'+str(0)+ '.vp',dtype = np.float32)"
+    "plt.imshow(vpdata.T)"
    ]
   },
   {
