--- a/data_process/marmousi_process_2.ipynb
+++ b/data_process/marmousi_process_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,70 +12,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "99 end\n",
-      "199 end\n",
-      "299 end\n",
-      "399 end\n",
-      "499 end\n",
-      "599 end\n",
-      "699 end\n",
-      "799 end\n",
-      "899 end\n",
       "999 end\n",
-      "1099 end\n",
-      "1199 end\n",
-      "1299 end\n",
-      "1399 end\n",
-      "1499 end\n",
-      "1599 end\n",
-      "1699 end\n",
-      "1799 end\n",
-      "1899 end\n",
-      "1999 end\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '\\\\\\\\10.1.4.151\\\\share\\\\zzm\\\\data\\\\experiment2\\\\model_512_v2_2_label\\\\labels.npy'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "\u001B[1;32m<ipython-input-10-159d2a10cdae>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     19\u001B[0m     \u001B[1;32mif\u001B[0m \u001B[1;33m(\u001B[0m\u001B[0mnum\u001B[0m\u001B[1;33m+\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m%\u001B[0m\u001B[1;36m100\u001B[0m \u001B[1;33m==\u001B[0m \u001B[1;36m0\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     20\u001B[0m         \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnum\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;34m\"end\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 21\u001B[1;33m \u001B[0mnp\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msave\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34mr'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_v2_2_label\\labels'\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mlabels\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
-      "\u001B[1;32mD:\\development\\Anaconda3\\lib\\site-packages\\numpy\\lib\\npyio.py\u001B[0m in \u001B[0;36msave\u001B[1;34m(file, arr, allow_pickle, fix_imports)\u001B[0m\n\u001B[0;32m    522\u001B[0m         \u001B[1;32mif\u001B[0m \u001B[1;32mnot\u001B[0m \u001B[0mfile\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mendswith\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'.npy'\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    523\u001B[0m             \u001B[0mfile\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mfile\u001B[0m \u001B[1;33m+\u001B[0m \u001B[1;34m'.npy'\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 524\u001B[1;33m         \u001B[0mfid\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mopen\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mfile\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;34m\"wb\"\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m    525\u001B[0m         \u001B[0mown_fid\u001B[0m \u001B[1;33m=\u001B[0m \u001B[1;32mTrue\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    526\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
-      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: '\\\\\\\\10.1.4.151\\\\share\\\\zzm\\\\data\\\\experiment2\\\\model_512_v2_2_label\\\\labels.npy'"
+      "1999 end\n",
+      "2999 end\n",
+      "3999 end\n",
+      "4999 end\n",
+      "5999 end\n",
+      "6999 end\n",
+      "7999 end\n",
+      "8999 end\n",
+      "9999 end\n"
      ]
     }
    ],
    "source": [
-    "labels = np.zeros((2048,3),dtype=np.float32)\n",
-    "for num in range(2048):\n",
+    "total_num = 10240\n",
+    "labels = np.zeros((total_num,5),dtype=np.float32)\n",
+    "s_list = [3000,3250,3500,3750,4000,4250,4500,4750,5000]\n",
+    "for num in range(total_num):\n",
     "    vp = np.ones((1024,1024),dtype=np.float32)*2000\n",
     "    x = np.random.randint(200, 800)\n",
     "    y = np.random.randint(200, 800)\n",
     "    r = np.random.randint(50, min(x,1024-x,y,1024-y,200))\n",
+    "    s_c = np.random.randint(0, 9)\n",
+    "    s = s_list[s_c]\n",
     "    labels[num,0] = x\n",
     "    labels[num,1] = y\n",
     "    labels[num,2] = r\n",
+    "    labels[num,3] = s\n",
+    "    labels[num,4] = s_c\n",
     "    for i in range(x-r,x+r):\n",
     "        for j in range(y-r,y+r):\n",
     "            if (i-x)**2+(j-y)**2<r**2:\n",
-    "                vp[i,j] = 3000.\n",
+    "                vp[i,j] = s\n",
     "    vs = vp / np.sqrt(3)\n",
     "    rho = 0.31 * vp ** (1 / 4) * 1000\n",
-    "    vp[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_v2_2\\m_'+str(num)+ '.vp')\n",
-    "    vs[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_v2_2\\m_'+str(num)+ '.vs')\n",
-    "    rho[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_v2_2\\m_'+str(num)+ '.rho')\n",
-    "    if (num+1)%100 == 0:\n",
+    "    vp[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_s\\m_'+str(num)+ '.vp')\n",
+    "    vs[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_s\\m_'+str(num)+ '.vs')\n",
+    "    rho[::2,::2].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_s\\m_'+str(num)+ '.rho')\n",
+    "    if (num+1)%1000 == 0:\n",
     "        print(num,\"end\")\n",
-    "np.save(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_v2_2_label\\labels',labels)"
+    "np.save(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_512_s_labels\\labels',labels)"
    ]
   },
   {
@@ -90,6 +74,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "for num in range(2048):\n",
@@ -106,13 +95,7 @@
     "    vp[::4,::4].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_256\\m_'+str(num)+ '.vp')\n",
     "    vs[::4,::4].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_256\\m_'+str(num)+ '.vs')\n",
     "    rho[::4,::4].T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\experiment2\\model_256\\m_'+str(num)+ '.rho')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -155,6 +138,111 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vp"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "vp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "vp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "vp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "vp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "vp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "vp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "vp"
+   ]
   },
   {
    "cell_type": "code",
