--- a/test/test_1.ipynb
+++ b/test/test_1.ipynb
@@ -832,14 +832,14 @@
    ],
    "source": [
     "plt.imshow(vp)\n",
-    "plt.xlabel('¾àÀë£¨m£©')\n",
-    "plt.ylabel('Éî¶È£¨m£©')\n",
+    "plt.xlabel('ï¿½ï¿½ï¿½ë£¨mï¿½ï¿½')\n",
+    "plt.ylabel('ï¿½ï¿½È£ï¿½mï¿½ï¿½')\n",
     "plt.xticks([0,100,200,300],[0,500,1000,1500])\n",
     "plt.yticks([0,50,100,150,200,250,300,350],[0,250,500,750,1000,1250,1500,1750])\n",
     "ax = plt.gca()\n",
     "ax.xaxis.set_ticks_position('top')\n",
     "ax.xaxis.set_label_position('top')\n",
-    "plt.savefig(r'C:\\Users\\zongzhimin\\Desktop\\model2\\model\\Ä£ÐÍ1.jpg',bbox_inches='tight',dpi=300,pad_inches=0.5)\n",
+    "plt.savefig(r'C:\\Users\\zongzhimin\\Desktop\\model2\\model\\Ä£ï¿½ï¿½1.jpg',bbox_inches='tight',dpi=300,pad_inches=0.5)\n",
     "cax = plt.axes([0.26,0.04,0.505,0.05])\n",
     "plt.colorbar(cax=cax,orientation='horizontal')"
    ]
@@ -885,22 +885,21 @@
    ],
    "source": [
     "plt.imshow(vp2)\n",
-    "plt.xlabel('¾àÀë£¨m£©')\n",
-    "plt.ylabel('Éî¶È£¨m£©')\n",
+    "plt.xlabel('ï¿½ï¿½ï¿½ë£¨mï¿½ï¿½')\n",
+    "plt.ylabel('ï¿½ï¿½È£ï¿½mï¿½ï¿½')\n",
     "plt.xticks([0,100,200,300,400,500],[0,500,1000,1500,2000,2500])\n",
     "plt.yticks([0,100,200,300,400,500],[0,500,1000,1500,2000,2500])\n",
     "ax = plt.gca()\n",
     "ax.xaxis.set_ticks_position('top')\n",
     "ax.xaxis.set_label_position('top')\n",
-    "plt.savefig(r'C:\\Users\\zongzhimin\\Desktop\\model2\\model\\Ä£ÐÍ2.jpg',bbox_inches='tight',dpi=300,pad_inches=0.5)\n",
+    "plt.savefig(r'C:\\Users\\zongzhimin\\Desktop\\model2\\model\\Ä£ï¿½ï¿½2.jpg',bbox_inches='tight',dpi=300,pad_inches=0.5)\n",
     "cax = plt.axes([0.26,0.04,0.505,0.05])\n",
     "plt.colorbar(cax=cax,orientation='horizontal')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": null,
    "outputs": [],
    "source": [
     "vp.T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\others\\model_2\\model_400_400\\m.vp')\n",
@@ -908,6 +907,240 @@
     "rho.T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\others\\model_2\\model_400_400\\m.rho')\n",
     "qp.T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\others\\model_2\\model_400_400\\m.qp')\n",
     "qs.T.tofile(r'\\\\10.1.4.151\\share\\zzm\\data\\others\\model_2\\model_400_400\\m.qs')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vs = np.zeros((600,600),dtype=np.float32)\n",
+    "vs.T.tofile(r'C:\\Users\\zongzhimin\\Desktop\\model2\\m_2.vs')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vp = np.loadtxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\vp.txt')\n",
+    "vs = np.loadtxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\vs.txt')\n",
+    "rho = np.loadtxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\rho.txt')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vp = vp.astype(np.float32)\n",
+    "vs = vs.astype(np.float32)\n",
+    "rho = rho.astype(np.float32)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plt.imshow(vp)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vp.T.tofile(r'C:\\Users\\zongzhimin\\Desktop\\model\\m.vp')\n",
+    "vs.T.tofile(r'C:\\Users\\zongzhimin\\Desktop\\model\\m.vs')\n",
+    "rho.T.tofile(r'C:\\Users\\zongzhimin\\Desktop\\model\\m.rho')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vp_m1 = np.fromfile(r'\\\\10.1.4.151\\share\\zzm\\data\\others\\model_2\\model_400_400\\m.vp',dtype=np.float32)\n",
+    "vs_m1 = np.fromfile(r'\\\\10.1.4.151\\share\\zzm\\data\\others\\model_2\\model_400_400\\m.vs',dtype=np.float32)\n",
+    "rho_m1 = np.fromfile(r'\\\\10.1.4.151\\share\\zzm\\data\\others\\model_2\\model_400_400\\m.rho',dtype=np.float32)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vp_m1 = vp_m1.reshape((400,400))\n",
+    "vs_m1 = vs_m1.reshape((400,400))\n",
+    "rho_m1 = rho_m1.reshape((400,400))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plt.imshow(vp_m1.T)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "np.savetxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\txt\\m_1_vp.txt',vp_m1.T)\n",
+    "np.savetxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\txt\\m_1_vs.txt',vs_m1.T)\n",
+    "np.savetxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\txt\\m_1_rho.txt',rho_m1.T)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vp_m1 = np.fromfile(r'\\\\10.1.4.151\\share\\zzm\\data\\others\\model_2\\model_400_600\\m_1.vp',dtype=np.float32)\n",
+    "vs_m1 = np.fromfile(r'\\\\10.1.4.151\\share\\zzm\\data\\others\\model_2\\model_400_600\\m_1.vs',dtype=np.float32)\n",
+    "rho_m1 = np.fromfile(r'\\\\10.1.4.151\\share\\zzm\\data\\others\\model_2\\model_400_600\\m_1.rho',dtype=np.float32)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "vp_m1 = vp_m1.reshape((600,400))\n",
+    "vs_m1 = vs_m1.reshape((600,400))\n",
+    "rho_m1 = rho_m1.reshape((600,400))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "plt.imshow(vp_m1.T)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "np.savetxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\txt\\m_1_400_600_vp.txt',vp_m1.T)\n",
+    "np.savetxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\txt\\m_1_400_600_vs.txt',vs_m1.T)\n",
+    "np.savetxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\txt\\m_1_400_600_rho.txt',rho_m1.T)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "np.savetxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\txt\\m_1_400_600_vp.txt',vp_m1.T)\n",
+    "np.savetxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\txt\\m_1_400_600_vs.txt',vs_m1.T)\n",
+    "np.savetxt(r'C:\\Users\\zongzhimin\\Desktop\\model\\txt\\m_1_400_600_rho.txt',rho_m1.T)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vp = vp.astype(np.float32)\n",
+    "vs = vs.astype(np.float32)\n",
+    "rho = rho.astype(np.float32)"
    ]
   },
   {
